tests/errors/compiler/outside_of_scope.c
int main()
{
	{
		int i = 0;
	}
	i = 10;
	return 1;
}
